--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
 </head>
 <body>
     <main>
-
+        <div class="grid-box">
+            <div class="box orange">
+                <img src="imgs/icon-sedans.svg" alt="sedans">
+                <h1>Sedans</h1>
+                <p>Choose a sedan fot its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+                <button class="orange">Learn more</button>
+            </div>
+            <div class="box blue">
+                <img src="imgs/icon-suvs.svg" alt="sedans">
+                <h1>suvs</h1>
+                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adverntures</p>
+                <button class="blue">Learn more</button>
+            </div>
+            <div class="box bluedark">
+                <img src="imgs/icon-luxury.svg" alt="sedans">
+                <h1>luxury</h1>
+                <p>Choose a sedan fot its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+                <button class="bluedark">Learn more</button>
+            </div>
+        </div>
     </main>
 </body>
 </html>
