Closing the project

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="box blue">
                 <img src="imgs/icon-suvs.svg" alt="sedans">
                 <h1>suvs</h1>
-                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adverntures</p>
+                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adverntures.</p>
                 <button class="blue">Learn more</button>
             </div>
             <div class="box bluedark">
                 <img src="imgs/icon-luxury.svg" alt="sedans">
                 <h1>luxury</h1>
-                <p>Choose a sedan fot its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+                <p>Cruise in the best car brands without the bloadted prices.</br>Enjoy the enhanced comfort of a luxury and arrive in style.</p>
                 <button class="bluedark">Learn more</button>
             </div>
         </div>
